<resources>
    <string name="app_name">MyCash</string>
    <string name="welcome_to_mycash">Добро пожаловать в приложение MyCash!
        Это приложение поможет вам вести свой бюджет и контролировать траты.</string>
    <string name="start_button_text">Начать</string>
    <string name="enter_account_name">Введите название счета:</string>
    <string name="enter_account_balance">Введите остаток на счете:</string>
    <string name="name_placeholder">Основной счет</string>
    <string name="next">Продолжить</string>
    <string name="balance_placeholder">10 000</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="circle">circle</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="diagrams">Diagrams</string>
    <string name="categories">Categories</string>
    <string name="accounts">Accounts</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textRegister">Зарегистрируйтесь, чтобы иметь возможность добавлять новые счета</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>