<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_diagrams"
        android:icon="@drawable/diagrams"
        android:title="@string/diagrams" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/categories"
        android:title="@string/categories" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/accounts"
        android:title="@string/accounts" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

</menu>